// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns component should have columns one column half width and 3 other as default 1`] = `
<DocumentFragment>
  <div
    class="columns is-multiline"
  >
    <div
      class="column is-half"
    >
      1
    </div>
    <div
      class="column"
    >
      2
    </div>
    <div
      class="column"
    >
      3
    </div>
    <div
      class="column"
    >
      4
    </div>
  </div>
</DocumentFragment>
`;

exports[`Columns component should have columns one column half width, other narrow and 2 other as default 1`] = `
<DocumentFragment>
  <div
    class="columns is-multiline"
  >
    <div
      class="column is-half"
    >
      1
    </div>
    <div
      class="column is-narrow"
    >
      2
    </div>
    <div
      class="column"
    >
      3
    </div>
    <div
      class="column"
    >
      4
    </div>
  </div>
</DocumentFragment>
`;

exports[`Columns component should render 1`] = `
<DocumentFragment>
  <div
    class="columns is-multiline"
  />
</DocumentFragment>
`;

exports[`Columns component should render 2`] = `
<DocumentFragment>
  <div
    class="column"
  />
</DocumentFragment>
`;

exports[`Columns component should render as paragraph 1`] = `
<DocumentFragment>
  <p
    class="columns is-multiline"
  />
  <p
    class="column is-half"
  >
    1
  </p>
  <p
    class="column"
  >
    2
  </p>
  <p
    class="column"
  >
    3
  </p>
  <p
    class="column"
  >
    4
  </p>
  <p />
</DocumentFragment>
`;
